Adding RHEL support to Consumer Edge
Change-Id: Id8424fcd8aa5570633e29df916a5d23e3d98efed

--- a/all-full-install.yml
+++ b/all-full-install.yml
@@ -22,7 +22,7 @@
   - set-proxy
   - google-tools
   - update-automation
-  - ready-ubuntu
+  - ready-linux
   - setup-kvm
   - abm-install
   - abm-software
