--- a/roles/abm-install/tasks/share-kubeconfig.yml
+++ b/roles/abm-install/tasks/share-kubeconfig.yml
@@ -11,6 +11,22 @@
   - abm-post-install
   - abm-install
   - kubeconfig-share
+  when:
+  - target_os == "ubuntu"
+
+- name: Create folder for kubeconfig
+  ansible.builtin.file:
+    path: "{{ kubeconfig_shared_root }}"
+    state: "directory"
+    mode: '0777'
+    group: wheel
+    owner: root
+  tags:
+  - abm-post-install
+  - abm-install
+  - kubeconfig-share
+  when:
+  - target_os == "redhat"
 
 # Copy the kubeconfig to all other in cluster
 - name: Copy generated kubeconfig to other in cluster
