--- a/roles/abm-software/tasks/create-snapshot.yaml
+++ b/roles/abm-software/tasks/create-snapshot.yaml
@@ -80,6 +80,9 @@
     cmd: bmctl check cluster --snapshot --snapshot-config {{ snapshot_config_file }} --cluster {{ cluster_name }} --service-account-key-file {{ remote_keys_folder }}/provisioning-gsa.json --snapshot-output {{ snapshot_output_file }} --kubeconfig {{ kubeconfig_shared_location }}
   args:
     chdir: "{{ abm_install_folder }}"
+  environment:
+    PATH: "/usr/local/bin:{{ ansible_env.PATH }}"
+
 
 - name: Upload snapshot to GCS
   command:
