--- a/roles/abm-install/tasks/share-kubeconfig.yml
+++ b/roles/abm-install/tasks/share-kubeconfig.yml
@@ -29,6 +29,7 @@
   - target_os == "redhat"
 
 # Copy the kubeconfig to all other in cluster
+# NOTE: SCP copies to ALL nodes in the peer group (as deisred)
 - name: Copy generated kubeconfig to other in cluster
   become_user: "{{ abm_install_user }}"
   command:
@@ -46,7 +47,7 @@
   - kubeconfig-share
   - kube-share
 
-# On primary, setup symbolic link to the desired location
+# With the kubectl copied to other peers, setup only a symbolic link to the same location on the primary machine box
 - name: Symbolic link for primary machines
   ansible.builtin.file:
     src: "{{ abm_install_folder }}/bmctl-workspace/{{ cluster_name }}/{{ cluster_name }}-kubeconfig"
@@ -61,6 +62,7 @@
   - abm-install
   - kubeconfig-share
 
+# NOTE: Needs to be writeable so the `kubens` and `kubectx` can modify
 - name: Set permissions to edit for all
   ansible.builtin.file:
     path: "{{ kubeconfig_shared_location }}"
