--- a/roles/abm-software/tasks/external-secrets.yaml
+++ b/roles/abm-software/tasks/external-secrets.yaml
@@ -49,6 +49,7 @@
   tags:
   - external-secrets-secret
   - external-secrets
+  - imperative-command
 
 - name: Create folder for External Secrets files
   file:
@@ -64,9 +65,6 @@
   template:
     src: external-secrets-store.yaml.j2
     dest: "{{ external_secrets_files }}/external-secrets-store.yaml"
-  when:
-  - (primary_cluster_machine is defined)
-  - (primary_cluster_machine == true)
   tags:
   - external-secrets
   - external-secrets-store
