combining update-automation with ready-linux
Change-Id: I61a640795db4436fcba797352e7b698e14ad9e35

--- a/roles/ready-linux/tasks/main.yml
+++ b/roles/ready-linux/tasks/main.yml
@@ -325,3 +325,9 @@
   - nfs-storage-robin
   - robin-setup
   - modprobe
+
+- name: Setup cron jobs for backup
+  import_tasks: setup-cron-jobs.yml
+  tags:
+  - os-setup
+  - cron-jobs
