Isoalte GCP state into one role
Change-Id: I80d20346133fb02fee79417f8eaf0db555ac6798

--- a/roles/abm-software/tasks/csi-common.yaml
+++ b/roles/abm-software/tasks/csi-common.yaml
@@ -12,91 +12,8 @@
 ###
 
 ###
-### git-creds secret for SDS Cluster Trait Repo
-###
-- name: "Test for existing SDS git-creds secret"
-  include_tasks: kubectl-presence.yml
-  vars:
-    name: "{{ storage_provider_auth_secret }}"
-    type: "secrets"
-    namespace: "config-management-system"
-    kubeconfig: "{{ kubeconfig_shared_location }}"
-    fact_name: "has_sds_repo_secret"
-  tags:
-  - sds-common-setup
-
-# Create GCP Secret if not exist
-- name: "Add SDS git-creds Google Secrets if not exist"
-  run_once: true # confirmed, this is fleet-level so run-once is OK
-  shell: |
-    EXISTS=$(gcloud secrets list --filter="{{ storage_provider_auth_secret }}" --format="value(name)" --project="{{ google_project_id }}")
-    if [ -z "${EXISTS}" ]]; then
-      gcloud secrets create {{ storage_provider_auth_secret }} --replication-policy="automatic" --project="{{ google_project_id }}"
-      echo "ADDED"
-    fi
-  register: sds_creds
-  when:
-  - (primary_cluster_machine is defined)
-  - (primary_cluster_machine == true)
-  - (has_sds_repo_secret is not defined)
-  - (has_sds_repo_secret != true)
-  tags:
-  - sds-common-setup
-  - sds-git-creds
-  - gcloud-mutate
-
-# Create a new secret version if none are active or exist
-- name: "Add new version to SDS git-creds to Google Secrets Manager if none exist or none active"
-  run_once: true # confirmed, this is fleet-level so run-once is OK
-  shell: |
-    EXISTS=$(gcloud secrets versions list {{ storage_provider_auth_secret }} --filter="state=enabled" --format="value(name)"  --project="{{ google_project_id }}")
-    if [ -z "${EXISTS}" ]; then
-      echo -n "{\"token\"{{':'}} \"{{ scm_token_token }}\", \"username\"{{':'}} \"{{ scm_token_user }}\"}" | gcloud secrets versions add {{ storage_provider_auth_secret }} --project="{{ google_project_id }}" --data-file=-
-      echo "ADDED"
-    fi
-  register: sds_secret_version
-  changed_when: '"ADDED" in sds_secret_version.stdout_lines'
-  when:
-  - (primary_cluster_machine is defined)
-  - (primary_cluster_machine == true)
-  - (has_sds_repo_secret is not defined)
-  - (has_sds_repo_secret != true)
-  tags:
-  - sds-common-setup
-  - sds-git-creds
-  - gcloud-mutate
-
-# Check on GCS Bucket status
-- name: Check SDS GCS Backup Bucket
-  run_once: true  # confirmed, this is fleet-level so run-once is OK
-  ignore_errors: true
-  command:
-    cmd: gsutil -q ls gs://{{ storage_provider_gcs_bucket_name }}/.dontremove > /dev/null 2>&1
-  changed_when: has_bucket.rc > 0
-  register: has_bucket
-  when:
-  - (primary_cluster_machine is defined)
-  - (primary_cluster_machine == true)
-  tags:
-  - sds-common-setup
-  - sds-bucket
-  - gcloud-command
-
-- name: Create SDS Backup Bucket
-  run_once: true # confirmed, this is fleet-level so run-once is OK
-  shell: |
-    gsutil mb -p "{{ google_project_id }}" gs://{{ storage_provider_gcs_bucket_name }}
-    echo "do not remove this file" | gsutil cp - gs://{{ storage_provider_gcs_bucket_name }}/.dontremove
-  args:
-    executable: /bin/bash
-  when:
-  - (primary_cluster_machine is defined)
-  - (primary_cluster_machine == true)
-  - has_bucket.rc > 0
-  tags:
-  - sds-common-setup
-  - sds-bucket
-  - gcloud-mutate
+### At this point, the SDS git-creds should have been created (either via Ansible or outside IaC setup)
+###    The GCS bucket for SDS backup should also have been created
 
 # Apply SDS CTR to cluster
 - name: Create SDS file/folder location
@@ -111,6 +28,7 @@
   - sds-common-setup
   - sds-cluster-trait-repo
 
+# TODO: Add a parameter to skip install of SDS Cluster Trait Repo (allowing setup of OS/dependencies, but skip the actual install)
 - name: Copy SDS Cluster Trait Repo Config
   template:
     src: sds-cluster-trait-repo.yaml.j2
