Enforcing the published prereqs for storage
Change-Id: I2efdbe5994247c45c1ffa6f74d731bcb34a5a1a8

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,3 +1,6 @@
 [defaults]
 callbacks_enabled = timer, profile_roles
 # stdout_callback = dense
+
+# skip displaying "skipped" tasks
+display_skipped_hosts = False
